jqlParser.py
# Generated from jql.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class jqlParser ( Parser ):

    grammarFileName = "jql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"' '", u"';'", u"'.'", 
                     u"'('", u"')'", u"','", u"'='", u"'*'", u"'~'", u"'!~'", 
                     u"'<'", u"'<='", u"'>'", u"'>='", u"'!='" ]

    symbolicNames = [ u"<INVALID>", u"NUMBER", u"WHITESPACE", u"SCOL", u"DOT", 
                      u"OPEN_PAR", u"CLOSE_PAR", u"COMMA", u"EQ", u"STAR", 
                      u"CONTAINS", u"NOT_CONTAINS", u"LT", u"LT_EQ", u"GT", 
                      u"GT_EQ", u"NOT_EQ", u"K_ASC", u"K_AND", u"K_BY", 
                      u"K_CHANGED", u"K_DESC", u"K_EMPTY", u"K_IN", u"K_IS", 
                      u"K_NOT", u"K_NULL", u"K_OR", u"K_ORDER", u"K_TO", 
                      u"K_WAS", u"F_AFFECTED_VERSION", u"F_APPROVALS", u"F_ASSIGNEE", 
                      u"F_ATTACHMENTS", u"F_CATEGORY", u"F_COMMENT", u"F_COMPONENT", 
                      u"F_CREATED", u"F_CREATOR", u"F_CUSTOM_FIELD", u"F_CUSTOMER_REQUEST_TYPE", 
                      u"F_DESCRIPTION", u"F_DUE", u"F_ENVIRONMENT", u"F_EPIC_LINK", 
                      u"F_FILTER", u"F_FIX_VERSION", u"F_ISSUE_KEY", u"F_LABELS", 
                      u"F_LAST_VIEWED", u"F_LEVEL", u"F_ORGANIZATION", u"F_ORIGINAL_ESTIMATE", 
                      u"F_PARENT", u"F_PRIORITY", u"F_PROJECT", u"F_RANK", 
                      u"F_REMAINING_ESTIMATE", u"F_REPORTER", u"F_REQUEST_CHANNEL_TYPE", 
                      u"F_REQUEST_LAST_ACTIVITY_TIME", u"F_RESOLUTION", 
                      u"F_RESOLVED", u"F_SPRINT", u"F_STATUS", u"F_SUMMARY", 
                      u"F_TEXT", u"F_TIME_SPENT", u"F_TYPE", u"F_UPDATED", 
                      u"F_VOTER", u"F_VOTES", u"F_WATCHER", u"F_WATCHERS", 
                      u"F_WORK_RATIO", u"FUNC_APPROVED", u"FUNC_APPROVER", 
                      u"FUNC_CASCADE_OPTION", u"FUNC_CLOSED_SPRINTS", u"FUNC_COMPONENTS_LEAD_BY_USER", 
                      u"FUNC_CURRENT_LOGIN", u"FUNC_CURRENT_USER", u"FUNC_EARLIEST_UNRELEASED_VERSION", 
                      u"FUNC_END_OF_DAY", u"FUNC_END_OF_MONTH", u"FUNC_END_OF_WEEK", 
                      u"FUNC_END_OF_YEAR", u"FUNC_FUTURE_SPRINTS", u"FUNC_ISSUE_HISTORY", 
                      u"FUNC_ISSUES_WITH_REMOTE_LINKS_BY_GLOBAL_ID", u"FUNC_LAST_LOGIN", 
                      u"FUNC_LATEST_RELEASED_VERSION", u"FUNC_LINKED_ISSUES", 
                      u"FUNC_MEMBERS_OF", u"FUNC_MY_APPROVAL", u"FUNC_MY_PENDING", 
                      u"FUNC_NOW", u"FUNC_OPEN_SPRINTS", u"FUNC_PARENT_EPIC", 
                      u"FUNC_PENDING", u"FUNC_PENDING_BY", u"FUNC_PROJECTS_LEAD_BY_USER", 
                      u"FUNC_PROJECTS_WHERE_USER_HAS_PERMISSIONS", u"FUNC_PROJECTS_WHERE_USER_HAS_ROLE", 
                      u"FUNC_RELEASED_VERSIONS", u"FUNC_STANDARD_ISSUE_TYPES", 
                      u"FUNC_START_OF_DAY", u"FUNC_START_OF_MONTH", u"FUNC_START_OF_WEEK", 
                      u"FUNC_START_OF_YEAR", u"FUNC_SUBTASK_ISSUE_TYPES", 
                      u"FUNC_UNRELEASED_VERSIONS", u"FUNC_VOTED_ISSUES", 
                      u"FUNC_WATCHED_ISSUES", u"IDENTIFIER", u"NUMERIC_LITERAL", 
                      u"STRING_LITERAL", u"SPACES", u"UNEXPECTED_CHAR" ]

    RULE_parse = 0
    RULE_jql_stmt_list = 1
    RULE_jql_stmt = 2
    RULE_expr = 3
    RULE_ordering_term = 4
    RULE_operator = 5
    RULE_literal_value = 6
    RULE_literal_list = 7
    RULE_keyword = 8
    RULE_state_name = 9
    RULE_field = 10
    RULE_function_name = 11

    ruleNames =  [ u"parse", u"jql_stmt_list", u"jql_stmt", u"expr", u"ordering_term", 
                   u"operator", u"literal_value", u"literal_list", u"keyword", 
                   u"state_name", u"field", u"function_name" ]

    EOF = Token.EOF
    NUMBER=1
    WHITESPACE=2
    SCOL=3
    DOT=4
    OPEN_PAR=5
    CLOSE_PAR=6
    COMMA=7
    EQ=8
    STAR=9
    CONTAINS=10
    NOT_CONTAINS=11
    LT=12
    LT_EQ=13
    GT=14
    GT_EQ=15
    NOT_EQ=16
    K_ASC=17
    K_AND=18
    K_BY=19
    K_CHANGED=20
    K_DESC=21
    K_EMPTY=22
    K_IN=23
    K_IS=24
    K_NOT=25
    K_NULL=26
    K_OR=27
    K_ORDER=28
    K_TO=29
    K_WAS=30
    F_AFFECTED_VERSION=31
    F_APPROVALS=32
    F_ASSIGNEE=33
    F_ATTACHMENTS=34
    F_CATEGORY=35
    F_COMMENT=36
    F_COMPONENT=37
    F_CREATED=38
    F_CREATOR=39
    F_CUSTOM_FIELD=40
    F_CUSTOMER_REQUEST_TYPE=41
    F_DESCRIPTION=42
    F_DUE=43
    F_ENVIRONMENT=44
    F_EPIC_LINK=45
    F_FILTER=46
    F_FIX_VERSION=47
    F_ISSUE_KEY=48
    F_LABELS=49
    F_LAST_VIEWED=50
    F_LEVEL=51
    F_ORGANIZATION=52
    F_ORIGINAL_ESTIMATE=53
    F_PARENT=54
    F_PRIORITY=55
    F_PROJECT=56
    F_RANK=57
    F_REMAINING_ESTIMATE=58
    F_REPORTER=59
    F_REQUEST_CHANNEL_TYPE=60
    F_REQUEST_LAST_ACTIVITY_TIME=61
    F_RESOLUTION=62
    F_RESOLVED=63
    F_SPRINT=64
    F_STATUS=65
    F_SUMMARY=66
    F_TEXT=67
    F_TIME_SPENT=68
    F_TYPE=69
    F_UPDATED=70
    F_VOTER=71
    F_VOTES=72
    F_WATCHER=73
    F_WATCHERS=74
    F_WORK_RATIO=75
    FUNC_APPROVED=76
    FUNC_APPROVER=77
    FUNC_CASCADE_OPTION=78
    FUNC_CLOSED_SPRINTS=79
    FUNC_COMPONENTS_LEAD_BY_USER=80
    FUNC_CURRENT_LOGIN=81
    FUNC_CURRENT_USER=82
    FUNC_EARLIEST_UNRELEASED_VERSION=83
    FUNC_END_OF_DAY=84
    FUNC_END_OF_MONTH=85
    FUNC_END_OF_WEEK=86
    FUNC_END_OF_YEAR=87
    FUNC_FUTURE_SPRINTS=88
    FUNC_ISSUE_HISTORY=89
    FUNC_ISSUES_WITH_REMOTE_LINKS_BY_GLOBAL_ID=90
    FUNC_LAST_LOGIN=91
    FUNC_LATEST_RELEASED_VERSION=92
    FUNC_LINKED_ISSUES=93
    FUNC_MEMBERS_OF=94
    FUNC_MY_APPROVAL=95
    FUNC_MY_PENDING=96
    FUNC_NOW=97
    FUNC_OPEN_SPRINTS=98
    FUNC_PARENT_EPIC=99
    FUNC_PENDING=100
    FUNC_PENDING_BY=101
    FUNC_PROJECTS_LEAD_BY_USER=102
    FUNC_PROJECTS_WHERE_USER_HAS_PERMISSIONS=103
    FUNC_PROJECTS_WHERE_USER_HAS_ROLE=104
    FUNC_RELEASED_VERSIONS=105
    FUNC_STANDARD_ISSUE_TYPES=106
    FUNC_START_OF_DAY=107
    FUNC_START_OF_MONTH=108
    FUNC_START_OF_WEEK=109
    FUNC_START_OF_YEAR=110
    FUNC_SUBTASK_ISSUE_TYPES=111
    FUNC_UNRELEASED_VERSIONS=112
    FUNC_VOTED_ISSUES=113
    FUNC_WATCHED_ISSUES=114
    IDENTIFIER=115
    NUMERIC_LITERAL=116
    STRING_LITERAL=117
    SPACES=118
    UNEXPECTED_CHAR=119

    def __init__(self, input, output=sys.stdout):
        super(jqlParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(jqlParser.ParseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jqlParser.EOF, 0)

        def jql_stmt_list(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.Jql_stmt_listContext)
            else:
                return self.getTypedRuleContext(jqlParser.Jql_stmt_listContext,i)


        def getRuleIndex(self):
            return jqlParser.RULE_parse

        def enterRule(self, listener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)




    def parse(self):

        localctx = jqlParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jqlParser.SCOL) | (1 << jqlParser.OPEN_PAR) | (1 << jqlParser.F_AFFECTED_VERSION) | (1 << jqlParser.F_APPROVALS) | (1 << jqlParser.F_ASSIGNEE) | (1 << jqlParser.F_ATTACHMENTS) | (1 << jqlParser.F_CATEGORY) | (1 << jqlParser.F_COMMENT) | (1 << jqlParser.F_COMPONENT) | (1 << jqlParser.F_CREATED) | (1 << jqlParser.F_CREATOR) | (1 << jqlParser.F_CUSTOM_FIELD) | (1 << jqlParser.F_CUSTOMER_REQUEST_TYPE) | (1 << jqlParser.F_DESCRIPTION) | (1 << jqlParser.F_DUE) | (1 << jqlParser.F_ENVIRONMENT) | (1 << jqlParser.F_EPIC_LINK) | (1 << jqlParser.F_FILTER) | (1 << jqlParser.F_FIX_VERSION) | (1 << jqlParser.F_ISSUE_KEY) | (1 << jqlParser.F_LABELS) | (1 << jqlParser.F_LAST_VIEWED) | (1 << jqlParser.F_LEVEL) | (1 << jqlParser.F_ORGANIZATION) | (1 << jqlParser.F_ORIGINAL_ESTIMATE) | (1 << jqlParser.F_PARENT) | (1 << jqlParser.F_PRIORITY) | (1 << jqlParser.F_PROJECT) | (1 << jqlParser.F_RANK) | (1 << jqlParser.F_REMAINING_ESTIMATE) | (1 << jqlParser.F_REPORTER) | (1 << jqlParser.F_REQUEST_CHANNEL_TYPE) | (1 << jqlParser.F_REQUEST_LAST_ACTIVITY_TIME) | (1 << jqlParser.F_RESOLUTION) | (1 << jqlParser.F_RESOLVED))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (jqlParser.F_SPRINT - 64)) | (1 << (jqlParser.F_STATUS - 64)) | (1 << (jqlParser.F_SUMMARY - 64)) | (1 << (jqlParser.F_TEXT - 64)) | (1 << (jqlParser.F_TIME_SPENT - 64)) | (1 << (jqlParser.F_TYPE - 64)) | (1 << (jqlParser.F_UPDATED - 64)) | (1 << (jqlParser.F_VOTER - 64)) | (1 << (jqlParser.F_VOTES - 64)) | (1 << (jqlParser.F_WATCHER - 64)) | (1 << (jqlParser.F_WATCHERS - 64)) | (1 << (jqlParser.F_WORK_RATIO - 64)))) != 0):
                self.state = 24
                self.jql_stmt_list()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(jqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jql_stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(jqlParser.Jql_stmt_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def jql_stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.Jql_stmtContext)
            else:
                return self.getTypedRuleContext(jqlParser.Jql_stmtContext,i)


        def SCOL(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.SCOL)
            else:
                return self.getToken(jqlParser.SCOL, i)

        def getRuleIndex(self):
            return jqlParser.RULE_jql_stmt_list

        def enterRule(self, listener):
            if hasattr(listener, "enterJql_stmt_list"):
                listener.enterJql_stmt_list(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJql_stmt_list"):
                listener.exitJql_stmt_list(self)




    def jql_stmt_list(self):

        localctx = jqlParser.Jql_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_jql_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jqlParser.SCOL:
                self.state = 32
                self.match(jqlParser.SCOL)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.jql_stmt()
            self.state = 47
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 40 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 39
                        self.match(jqlParser.SCOL)
                        self.state = 42 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==jqlParser.SCOL):
                            break

                    self.state = 44
                    self.jql_stmt() 
                self.state = 49
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 53
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 50
                    self.match(jqlParser.SCOL) 
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jql_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(jqlParser.Jql_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.ExprContext)
            else:
                return self.getTypedRuleContext(jqlParser.ExprContext,i)


        def OPEN_PAR(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.OPEN_PAR)
            else:
                return self.getToken(jqlParser.OPEN_PAR, i)

        def CLOSE_PAR(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.CLOSE_PAR)
            else:
                return self.getToken(jqlParser.CLOSE_PAR, i)

        def ordering_term(self):
            return self.getTypedRuleContext(jqlParser.Ordering_termContext,0)


        def K_AND(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.K_AND)
            else:
                return self.getToken(jqlParser.K_AND, i)

        def K_OR(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.K_OR)
            else:
                return self.getToken(jqlParser.K_OR, i)

        def getRuleIndex(self):
            return jqlParser.RULE_jql_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterJql_stmt"):
                listener.enterJql_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJql_stmt"):
                listener.exitJql_stmt(self)




    def jql_stmt(self):

        localctx = jqlParser.Jql_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_jql_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self.match(jqlParser.OPEN_PAR) 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 62
            self.expr()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jqlParser.K_AND or _la==jqlParser.K_OR:
                self.state = 63
                _la = self._input.LA(1)
                if not(_la==jqlParser.K_AND or _la==jqlParser.K_OR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 64
                self.expr()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jqlParser.CLOSE_PAR:
                self.state = 70
                self.match(jqlParser.CLOSE_PAR)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jqlParser.K_ORDER:
                self.state = 76
                self.ordering_term()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(jqlParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def field(self):
            return self.getTypedRuleContext(jqlParser.FieldContext,0)


        def operator(self):
            return self.getTypedRuleContext(jqlParser.OperatorContext,0)


        def literal_value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(jqlParser.Literal_valueContext)
            else:
                return self.getTypedRuleContext(jqlParser.Literal_valueContext,i)


        def function_name(self):
            return self.getTypedRuleContext(jqlParser.Function_nameContext,0)


        def state_name(self):
            return self.getTypedRuleContext(jqlParser.State_nameContext,0)


        def literal_list(self):
            return self.getTypedRuleContext(jqlParser.Literal_listContext,0)


        def OPEN_PAR(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.OPEN_PAR)
            else:
                return self.getToken(jqlParser.OPEN_PAR, i)

        def CLOSE_PAR(self, i=None):
            if i is None:
                return self.getTokens(jqlParser.CLOSE_PAR)
            else:
                return self.getToken(jqlParser.CLOSE_PAR, i)

        def getRuleIndex(self):
            return jqlParser.RULE_expr

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)




    def expr(self):

        localctx = jqlParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jqlParser.OPEN_PAR:
                self.state = 79
                self.match(jqlParser.OPEN_PAR)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
